Bug 989802 - Round viewport units to appunits using trunc rather than round so that repeated uses fit within a container.  r=roc

viewport-units-rounding-1.html fails without the patch and passes with
the patch.

viewport-units-rounding-2.html fails with an early version of the patch
but not without the patch or with the final version.